# zTerm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_TO_WEZTERM.md  README.md  TERMINAL_RENDERING.md  THEME_QUICK_START.md  THEME_TEST.md  deny.toml
.cargo/: config.toml
.claude/: COMPONENT_TEST_RULES.md  settings.json
.claude/skills/generate-component-story/: SKILL.md
.github/workflows/: README.md  ci.yml  claude-ci-fix.yml  claude.yml  release.yml  security-scan.yml
assets/themes/: dark.toml  dracula.toml
crates/axon_app/: Cargo.toml  build.rs
crates/axon_app/src/: app.rs
crates/axon_app/src/settings/: mod.rs
crates/axon_app/src/window/: main_window.rs
crates/axon_app/src/workspace/: mod.rs  pane.rs  workspace.rs
crates/axon_common/: Cargo.toml
crates/axon_common/src/: config.rs  error.rs  lib.rs  logging.rs
crates/axon_input/: Cargo.toml
crates/axon_input/src/: lib.rs
crates/axon_input/src/completion/: mod.rs
crates/axon_input/src/history/: mod.rs
crates/axon_terminal/: Cargo.toml
crates/axon_terminal/benches/: terminal_benchmarks.rs
crates/axon_terminal/src/: lib.rs
crates/axon_terminal/src/buffer/: cell.rs
crates/axon_terminal/src/platform/: mod.rs  shell.rs  unix.rs  windows.rs
crates/axon_terminal/src/terminal/: mod.rs  state.rs
crates/axon_terminal/tests/: performance_tests.rs
crates/axon_ui/: Cargo.toml  README.md
crates/axon_ui/benches/: ui_benchmarks.rs
crates/axon_ui/src/: lib.rs  theme.rs
crates/axon_ui/src/components/: mod.rs  tab_bar.rs  terminal_view.rs  title_bar.rs
crates/axon_ui/src/elements/: mod.rs  scrollbar.rs  terminal_element.rs
crates/axon_ui/src/theme/: builtin.rs  context.rs  loader.rs  manager.rs  terminal_theme.rs  tests.rs  theme_serde.rs
crates/axon_ui/tests/: component_tests.rs  performance_tests.rs  title_bar_tests.rs  ui_tests.rs
crates/z_term/: Cargo.toml  build.rs
crates/z_term/src/: app.rs  main.rs
crates/z_term/src/settings/: mod.rs
crates/z_term/src/window/: main_window.rs  mod.rs
crates/z_term/src/workspace/: mod.rs  pane.rs  workspace.rs
crates/zterm_common/: Cargo.toml
crates/zterm_common/src/: config.rs  error.rs  lib.rs  logging.rs  settings.rs
crates/zterm_input/: Cargo.toml
crates/zterm_input/src/: lib.rs
crates/zterm_input/src/completion/: mod.rs
crates/zterm_input/src/history/: mod.rs
crates/zterm_input/src/keybindings/: mod.rs
crates/zterm_terminal/: Cargo.toml  README.md  SHELL_INTEGRATION_ROADMAP.md
crates/zterm_terminal/benches/: shell_integration_bench.rs  terminal_benchmarks.rs
crates/zterm_terminal/examples/: basic.rs  test_pty_simple.rs
crates/zterm_terminal/src/: config.rs  event.rs  lib.rs  terminal.rs  vte_bridge.rs  vte_performer.rs
crates/zterm_terminal/src/buffer/: cell.rs  grid.rs  mod.rs
crates/zterm_terminal/src/config/: env_validation.rs
crates/zterm_terminal/src/grid/: attributes.rs  cell.rs  cell_attrs.rs  cluster.rs  clusterline.rs  color.rs  cursor.rs  line.rs  linebits.rs  mod.rs  screen.rs  stable_row_index.rs  storage.rs  terminal_state.rs  zone_range.rs
crates/zterm_terminal/src/parser/: ansi.rs  mod.rs
crates/zterm_terminal/src/platform/: mod.rs  unix.rs  windows.rs
crates/zterm_terminal/src/pty/: event_loop.rs  mod.rs
crates/zterm_terminal/src/shell_integration/: block.rs  event.rs  extractor.rs  handler.rs  inject.rs  json_osc_protocol.md  json_types.rs  mod.rs  scanner.rs  zone.rs
crates/zterm_terminal/src/terminal/: event.rs  mod.rs  pty_loop.rs  state.rs
crates/zterm_terminal/tests/: integration_test.rs  scroll_offset_sync_bug_test.rs  shell_integration_tests.rs  terminal_bounds_resize_test.rs  terminal_view_resize_bug_test.rs
crates/zterm_ui/: Cargo.toml  TERMINAL_VIEW.md
crates/zterm_ui/benches/: shell_integration_ui_bench.rs  title_bar_bench.rs  ui_benchmarks.rs
crates/zterm_ui/src/: lib.rs  terminal_colors.rs
crates/zterm_ui/src/components/: context_menu.rs  context_menu_view.rs  mod.rs  tab_bar.rs  terminal_view.rs  title_bar.rs
crates/zterm_ui/src/elements/: mod.rs  terminal_element.rs  terminal_scrollbar.rs
crates/zterm_ui/src/shell_integration/: ai_context.rs  context_menu.rs  gutter.rs  highlight.rs  mod.rs  mouse.rs
crates/zterm_ui/src/theme/: mod.rs  terminal_theme.rs
crates/zterm_ui/tests/: component_tests.rs  context_menu_tests.rs  title_bar_tests.rs  ui_tests.rs
examples/shell-integration/: README.md  test_osc_sequences.ps1  zterm-integration.ps1
examples/themes/: README.md  example-hex-theme.json  example-mixed-theme.json  example-rgba-theme.json
resources/windows/: README.md  axon_term.iss  zterm.iss
resources/windows/messages/: ChineseSimplified.isl
script/: bundle-windows.ps1
shell-integration/: zterm-pwsh.ps1
wix/: README.md  main.wxs
