[workspace]
resolver = "3"
members = [
    "crates/z_term",
    "crates/zterm_terminal",
    "crates/zterm_ui",
    "crates/zterm_input",
    "crates/zterm_common",
    "crates/axon_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["zTerm Team"]
license = "CC-BY-NC-SA-4.0"
rust-version = "1.85"
repository = "https://github.com/zerx-lab/zTerm"
description = "A modern cross-platform terminal emulator built with Rust and GPUI"

[workspace.dependencies]
# Internal crates
zterm_common = { path = "crates/zterm_common" }
zterm_terminal = { path = "crates/zterm_terminal" }
zterm_ui = { path = "crates/zterm_ui" }
zterm_input = { path = "crates/zterm_input" }
axon_ui = { path = "crates/axon_ui" }

# GPUI - 跟随 gpui-component 的 gpui 版本
gpui = { git = "https://github.com/zed-industries/zed" }

# UI 组件库
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main" }

# 终端相关 - 使用兼容版本
alacritty_terminal = "0.25"
portable-pty = "0.8"
vte = "0.15"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-channel = "2.0"
smol = "2.0"
flume = "0.11"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 工具库
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5.0"
shellexpand = "3.1"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-width = "0.2"
regex = "1.10"

# 平台特定 - Windows
[workspace.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Wdk_System_SystemServices",
]

# 平台特定 - Unix
[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.nix]
version = "0.29"
features = ["term", "process", "signal"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
