[package]
name = "axon_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Common utilities for Axon Terminal"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
dirs.workspace = true

[dev-dependencies]
