[package]
name = "z_term"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Main application for zTerm"

[[bin]]
name = "zterm"
path = "src/main.rs"

[dependencies]
zterm_common.workspace = true
zterm_terminal.workspace = true
zterm_ui.workspace = true
zterm_input.workspace = true
axon_ui.workspace = true

# GPUI
gpui.workspace = true
gpui-component.workspace = true

# Async
smol.workspace = true
futures.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]

[features]
default = []

[build-dependencies]
ico = "0.5.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"
winresource = "0.1.29"
