[package]
name = "z_term"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Main application for zTerm"

[[bin]]
name = "zterm"
path = "src/main.rs"

[dependencies]
zterm_common.workspace = true
zterm_terminal.workspace = true
zterm_ui.workspace = true
axon_ui.workspace = true

# GPUI
gpui.workspace = true
gpui-component.workspace = true

# Async
smol.workspace = true
futures.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]

[features]
default = ["shell-integration"]
shell-integration = [
    "zterm_terminal/shell-integration",
    "zterm_ui/shell-integration",
]

[build-dependencies]
ico = "0.5.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"
winresource = "0.1.29"

# WiX Toolset 元数据（用于生成 Windows MSI 安装包）
[package.metadata.wix]
upgrade-guid = "6C8E4A2D-1F3B-4E9A-8D2C-9F7E6B5A4C3D"
path-guid = "1A2B3C4D-5E6F-7A8B-9C0D-1E2F3A4B5C6D"
license = false
eula = false
