[package]
name = "zterm_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Common utilities for zTerm"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
dirs.workspace = true
notify.workspace = true
gpui.workspace = true
chrono.workspace = true
tracing-appender = "0.2.4"

[dev-dependencies]
