[package]
name = "zterm_input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Input handling for zTerm"

[lints]
workspace = true

[dependencies]
zterm_common.workspace = true

# GPUI
gpui.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dirs.workspace = true
regex.workspace = true

[dev-dependencies]
