[package]
name = "zterm_terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal core logic for zTerm"

[dependencies]
zterm_common.workspace = true

# GPUI for entity management
gpui.workspace = true

# Terminal parsing
alacritty_terminal.workspace = true
vte.workspace = true

# PTY
portable-pty.workspace = true

# Async
smol.workspace = true
flume.workspace = true
futures.workspace = true
async-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
unicode-width.workspace = true
dirs.workspace = true
which = "7"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "terminal_benchmarks"
harness = false
