[package]
name = "zterm_terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal backend for zTerm - PTY management, VTE parsing, and shell integration"

[features]
default = ["shell-integration"]
shell-integration = []

[dependencies]
# Internal
zterm_common.workspace = true

# PTY
portable-pty.workspace = true

# VTE Parser
vte.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
flume.workspace = true
smol.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot = "0.12"
indexmap = "2.0"
bitflags = { version = "2.8", features = ["serde"] }
unicode-width = "0.2"

# Serialization
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
anyhow.workspace = true
