[package]
name = "zterm_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "UI components for zTerm"

[dependencies]
zterm_common.workspace = true
zterm_terminal.workspace = true
axon_ui.workspace = true

# GPUI
gpui.workspace = true
gpui-component.workspace = true

# Async
smol.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
unicode-width.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Note: ui_benchmarks removed due to Selection type removal
# [[bench]]
# name = "ui_benchmarks"
# harness = false

[[bench]]
name = "title_bar_bench"
harness = false

[[bench]]
name = "shell_integration_ui_bench"
harness = false
